# lv_snake

./: .gitignore  CMakeLists.txt  lv_conf.h  lv_drv_conf.h
snake/: array.c  array.h  snake.c  snake.h
